--- a/package.json
+++ b/package.json
@@ -18,8 +18,31 @@
   },
   "homepage": "https://github.com/gardner589/gardner589.github.io#readme",
   "dependencies": {
-    "node-sass": "^4.10.0",
-    "vue": "^2.5.17",
-    "vue-material": "^1.0.0-beta-10.2"
+    "buefy": "^0.7.6",
+    "node-sass": "^4.10.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^2.0.0-alpha.20",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.3",
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sequence": "^1.0.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "vue": "^2.6.10",
+    "vueify": "^9.4.1"
+  },
+  "babel": {
+    "presets": [
+      "env"
+    ]
   }
 }
